# vacation_planner

./: Dockerfile  build-docker-image.yaml  pyproject.toml  report.md  requirements.txt  streamlit_api.py  streamlitui.py
.github/: build-docker-image.yaml
.github/workflows/: build-docker-image.yaml
src/vacation_planner/: Dockerfile  crew.py  main.py
