[project]
name = "vacation_planner"
version = "0.1.0"
description = "vacation_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "bedrock-agentcore>=0.1.0",
    "boto3>=1.42.73",
    "crewai-tools[serpapi]>=1.11.0",
    "crewai[tools]==1.11.0",
    "lancedb==0.29.2",
    "streamlit>=1.40.0",
]

[project.scripts]
vacation_planner = "vacation_planner.main:run"
run_crew = "vacation_planner.main:run"
train = "vacation_planner.main:train"
replay = "vacation_planner.main:replay"
test = "vacation_planner.main:test"
run_with_trigger = "vacation_planner.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# OneDrive / cloud folders often reject hardlinks (Windows os error 396).
link-mode = "copy"

[tool.crewai]
type = "crew"
